# gemini-swarm

./: .gitignore  README.md  pyproject.toml
scripts/: cost_compare.py  run_fastapi.py  smoke_test.py  verify_diff.py  verify_network.py
swarm/: cli.py  ingest.py  orchestrator.py  prose_run.py  serve.py
swarm/agents/: architect.py  backend.py  lead.py
swarm/engine/: __init__.py  _json.py  arbiter.py  deliberate.py  engine.py  events.py  modality.py  state.py
swarm/mapping/: ast_mapper.py  partition.py
swarm/modalities/: __init__.py  prose.py
swarm/protocol/: models.py
swarm/ui/: app.py  engine_app.py
tests/: test_architect.py  test_ast_mapper.py  test_deliberate.py  test_engine.py  test_engine_spine.py  test_engine_tui.py  test_lead.py  test_orchestrator.py  test_prose.py  test_tui.py
